# RayOS

./: .gitignore  AARCH64_BOOT.md  BOOT_SUCCESS.md  BOOT_TROUBLESHOOTING.md  BUILD_GUIDE.md  BUILD_ISO.md  CHAINLOADING_README.md  PHASE1_COMPLETE.md  PHASE2_PLAN.md  PHASE_10_COMPLETION_SUMMARY.md  PHASE_10_FINAL_REPORT.md  PHASE_10_TASK_3_SUMMARY.md  PHASE_11_FINAL_REPORT.md  PHASE_11_PLAN.md  PHASE_11_PROGRESS.md  PHASE_12_FINAL_REPORT.md  PHASE_12_PLAN.md  PHASE_13_FINAL_REPORT.md  PHASE_13_PLAN.md  PHASE_14_FINAL_REPORT.md  PHASE_16_FINAL_REPORT.md  PHASE_16_PLAN.md  PHASE_17_FINAL_REPORT.md  PHASE_17_PLAN.md  PHASE_18_FINAL_REPORT.md  PHASE_18_PLAN.md  PHASE_19_FINAL_REPORT.md  PHASE_19_PLAN.md  PHASE_20_PLAN.md  PHASE_21_FINAL_REPORT.md  PHASE_21_PLAN.md  PHASE_22_FINAL_REPORT.md  PHASE_22_PLAN.md  PHASE_23_FINAL_REPORT.md  PHASE_23_PLAN.md  PHASE_24_FINAL_REPORT.md  PHASE_24_PLAN.md  PHASE_25_PLAN.md  PHASE_26_FINAL_REPORT.md  PHASE_27_FINAL_REPORT.md  (+43 more)
bootloader/: Cargo.toml  README-uefi.md  rust-toolchain.toml
conductor/: Cargo.toml
conductor/src/: entropy_monitor.rs  lib.rs  main.rs  ouroboros.rs  task_orchestrator.rs  types.rs
cortex/: BUILD_NOTES.md  PHASE2_COMPLETE.md  README.md  cortex.toml.example
crates/bootloader/uefi_boot/: Cargo.toml
crates/bootloader/uefi_boot/src/: installer.rs  main.rs  main.rs.backup
crates/cortex/: Cargo.toml
crates/cortex/examples/: fusion_demo.rs  vision_only.rs
crates/cortex/src/: fusion.rs  kernel_link.rs  lib.rs  llm.rs  main.rs  types.rs
crates/cortex/src/vision/: mod.rs  object_recognizer.rs  udp_gaze.rs
crates/installer/: Cargo.toml
crates/installer/src/: main.rs
crates/intent/: Cargo.toml
crates/intent/examples/: deictic.rs
crates/intent/src/: conductor_bridge.rs  context_manager.rs  intent_parser.rs  lib.rs  llm_connector.rs  main.rs  policy_arbiter.rs
crates/kernel/: Cargo.toml
crates/kernel-aarch64-bare/: Cargo.toml  linker.ld  rust-toolchain.toml
crates/kernel-aarch64-bare/.cargo/: config.toml
crates/kernel-aarch64-bare/src/: acpi.rs  main.rs  pci.rs
crates/kernel-bare/: Cargo.toml  build.rs  linker.ld  rust-toolchain.toml  x86_64-rayos-kernel.json
crates/kernel-bare/.cargo/: config.toml
crates/kernel-bare/src/: a11y_integration.rs  access_control.rs  accessibility.rs  acpi.rs  advanced_compositing.rs  api_auth.rs  api_cost.rs  api_gateway.rs  api_governance_metrics.rs  api_load_balancer.rs  api_mediation.rs  api_monitoring.rs  api_policy.rs  api_priority.rs  api_quota.rs  api_rate_limiter.rs  api_resilience.rs  app_store.rs  audio_engine.rs  audio_server.rs  audit_logging.rs  bft.rs  boot_config.rs  boot_manager.rs  boot_marker.rs  cache_optimization.rs  certificate_manager.rs  container_orchestration.rs  container_scheduler.rs  content_streaming.rs  crash_recovery.rs  crypto_primitives.rs  ddos_protection.rs  dev_scanout.rs  device_handlers.rs  device_passthrough.rs  dhcp.rs  display_drivers.rs  display_server.rs  distributed_storage.rs  (+103 more)
crates/kernel-bare/src/ouroboros/: alerting.rs  autonomous_optimization.rs  batching.rs  coordinator.rs  dream_mode.rs  evolution_integration.rs  feedback_loop.rs  full_stack_tests.rs  genome.rs  impact_analysis.rs  integration_tests.rs  kernel_integration.rs  live_demo.rs  live_patching.rs  metrics_dashboard.rs  metrics_storage.rs  mod.rs  multi_objective_optimizer.rs  mutation.rs  observability.rs  patcher.rs  performance.rs  performance_analysis.rs  performance_metrics.rs  regression.rs  reporting.rs  scheduler.rs  selection.rs  system_profiling.rs  telemetry.rs  web_dashboard_backend.rs
crates/kernel-bare/src/ui/: animation.rs  app_runtime.rs  app_sdk.rs  clipboard.rs  compositor.rs  content.rs  data_transfer.rs  drag_drop.rs  example_apps.rs  file_picker.rs  font.rs  input.rs  input_router.rs  layout.rs  mod.rs  renderer.rs  shell.rs  shell_integration.rs  surface_manager.rs  vm_data_bridge.rs  widgets.rs  window_manager.rs  window_manager_ext.rs
crates/kernel-bare/tests/: backoff_unit.rs  phase_22_integration.rs
crates/kernel/.cargo/: config.toml
crates/kernel/src/: bare_metal_entry.rs  lib.rs  main.rs  rt_smoke.rs  task_queue.rs  types.rs
crates/kernel/src/geometry_logic/: access_control.rs  decision_tree.rs  logic_encoding.rs  mod.rs  state_geometry.rs
crates/kernel/src/hal/: allocator.rs  mod.rs  rt_core.rs  rt_vulkan.rs
crates/kernel/src/system1/: gpu_reflex.rs  megakernel.rs  mod.rs  ray_logic.rs
crates/kernel/src/system2/: candle_intent.rs  mod.rs  policy.rs  stat_intent.rs
crates/kernel/src/unified_pipeline/: core.rs  mod.rs  stages.rs
crates/volume/: Cargo.toml
crates/volume/src/: embedder.rs  epiphany.rs  fs.rs  gpu_search.rs  hnsw.rs  indexer.rs  ingestion.rs  lib.rs  main.rs  multimodal.rs  query_interface.rs  relationship_graph.rs  types.rs  vector_store.rs
docs/: AARCH64_BOOT.md  BOOTLOADER_CHAINLOADING.md  BOOTLOADER_COMPILATION_SUCCESS.md  BOOTLOADER_INSTALLER_INTEGRATION.md  BOOT_FIX_DIVISION.md  BOOT_SUCCESS.md  BOOT_TROUBLESHOOTING.md  BUILD_GUIDE.md  BUILD_ISO.md  DISK_LAYOUT_AND_PERSISTENCE.md  FINAL_SESSION_REPORT.md  INSTALLABLE_RAYOS_PLAN.md  INSTALLER_AND_BOOT_MANAGER_SPEC.md  INSTALLER_MILESTONE_JAN_07_2026.md  LINUX_SUBSYSTEM_CONTRACT.md  LINUX_SUBSYSTEM_DESIGN.md  NATIVE_VM_DISPLAY_ARCHITECTURE.md  OBSERVABILITY_AND_RECOVERY.md  PHASE1_COMPLETE.md  POLICY_CONFIGURATION_SCHEMA.md  PROCESS_EXPLORER.md  QUICKSTART.md  RAYOS_TODO.md  RAYOS_UI_FRAMEWORK.md  README.md  REBOOT_SEMANTICS_SPEC.md  REGISTRY_MODE_DETECTION.md  ROADMAP.md  SECURITY_THREAT_MODEL.md  SENTIENT_SUBSTRATE.md  SESSION_COMPLETION_REPORT_JAN_07_2026.md  SESSION_SUMMARY.md  SYSTEM_ARCHITECTURE.md  SYSTEM_LOG.md  UPDATE_AND_RECOVERY_STRATEGY.md  VM_REGISTRY_SPEC.md  WAYLAND_FORWARDING_SPEC.md  WINDOWS_GPU_CONTRACT.md  WINDOWS_POLICY_CONTRACT.md  WINDOWS_SUBSYSTEM_CONTRACT.md  (+8 more)
intent/: Cargo.toml
kernel/: BUILD_SUMMARY.md  Cargo.toml  README.md
kernel/src/: lib.rs  types.rs
kernel/src/hal/: hive.rs  mod.rs
kernel/src/system1/: megakernel.rs  mod.rs  ray_logic.rs
kernel/src/system2/: intent.rs  mod.rs
scripts/: build-iso.ps1  (+97 more)
(+175 files in other folders)
