[package]
name = "rayos-conductor"
version = "0.1.0"
edition = "2021"
authors = ["RayOS Team"]
description = "Phase 4: The Life - Autonomous task orchestration and self-optimization"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Concurrency and synchronization
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"

# Task scheduling and work stealing
rayon = "1.8"
crossbeam-deque = "0.8"

# Metrics and monitoring
sysinfo = "0.30"
prometheus = { version = "0.13", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Hashing and IDs
blake3 = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.10"

# Logging and error handling
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"

# Process management (for arena simulation)
nix = { version = "0.27", features = ["process", "signal"] }

# Additional dependencies
num_cpus = "1.16"
fastrand = "2.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[features]
default = []
metrics = ["prometheus"]
full = ["metrics"]


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[build]
rustc-wrapper = "sccache"
