[package]
name = "rayos-kernel"
version = "0.1.0"
edition = "2021"
authors = ["RayOS Kernel Team"]

[[bin]]
name = "rayos-kernel"
path = "src/main.rs"

[lib]
name = "rayos_kernel"
path = "src/lib.rs"

[dependencies]
# GPU Compute
wgpu = "0.19"
pollster = "0.3"

# Math and Spatial
glam = { version = "0.25", features = ["bytemuck"] }
bytemuck = { version = "1.14", features = ["derive"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Memory Management
crossbeam = "0.8"
parking_lot = "0.12"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[build]
rustc-wrapper = "sccache"
