[package]
name = "rayos-kernel-aarch64-bare"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

authors = ["RayOS Kernel Team"]

[[bin]]
name = "kernel-aarch64-bare"
path = "src/main.rs"
test = false
bench = false

[dependencies]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[build-dependencies]
