[package]
name = "rayos-kernel-bare"
version = "0.1.0"
edition = "2021"
authors = ["RayOS Kernel Team"]
build = "build.rs"

[[bin]]
name = "kernel-bare"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# Minimal (no_std-safe)
libm = { version = "0.2", default-features = false }

[features]
# Default behavior: local model path if available, with deterministic fallback.
default = ["local_llm", "local_ai"]

# Enable deterministic in-guest replies.
local_ai = []

# Enable local (in-guest) learned model inference when a `model.bin` is provided.
local_llm = []

# Enable the host-bridge protocol (emits RAYOS_INPUT / consumes AI: replies).
# When enabled, local_ai is automatically suppressed in code to avoid double replies.
host_ai = []

# Development-only: publish a synthetic guest scanout so the native presentation
# blit path can be validated before virtio-gpu/VMM scanout is implemented.
dev_scanout = []

# Scaffolding for an in-kernel VMM virtio-gpu device model.
# This is intentionally off by default while the hypervisor runtime is built out.
vmm_virtio_gpu = []

# Scaffolding for a minimal virtio-input device model (P3 work).
vmm_virtio_input = []

# Scaffolding for virtio-console device model (P1 work).
vmm_virtio_console = []

# Self-test: run an in-kernel virtio-console selftest at boot to verify console dispatch
vmm_virtio_console_selftest = []
# Scaffolding for an in-kernel hypervisor runtime skeleton (VMX-first on x86_64).
vmm_hypervisor = []

# Development-only: run the VMX "enter guest" smoke test (HLT loop + VM-exit markers).
# Without this, `vmm_hypervisor` will only do bring-up (VMXON/VMCS setup) and then VMXOFF,
# allowing RayOS to continue into the interactive loop.
vmm_hypervisor_smoke = []

# Development-only: test virtio-net packet loopback (device starts as virtio-net instead of virtio-blk).
vmm_hypervisor_net_test = []

# Testing flag: force VMWRITE injection failures to exercise fallback paths (LAPIC, etc.).
vmm_inject_force_fail = []

# Testing flag: force MSI fallback path (used in combination with vmm_inject_force_fail to
# force the code path that exercises MSI delivery).
vmm_inject_force_msi_fail = []

# Testing flag: force all injection paths to fail (VMWRITE/LAPIC/MSI) so backoff logic
# and retry counters can be exercised deterministically in CI.
vmm_inject_force_all_fail = []

# Self-test: run an in-kernel backoff retry selftest at boot to verify counters/logs.
vmm_inject_backoff_selftest = []

# P1: initialize virtio-blk backing store from an embedded disk image.
# This keeps existing synthetic-pattern behavior as the default, so existing tests
# remain stable.
vmm_virtio_blk_image = []

# Dev-only self-test: verifies virtio-blk backing persistence across a QEMU `system_reset`.
vmm_virtio_blk_persist_selftest = []

# P1 (WIP): boot a real Linux guest under the in-kernel VMM.
vmm_linux_guest = []

# Test/dev-only: auto-start the embedded Linux desktop guest at boot (hidden) and
# run it via VMX time-slices from the main loop tick.
vmm_linux_desktop_autostart = []

# Debug-only: extremely verbose virtio-blk MMIO access tracing.
vmm_trace_virtio_blk_mmio = []

# Phase 21.1: Enable the native UI shell (window manager, compositor).
ui_shell = []

# Serial debug output for various subsystems.
serial_debug = []

# Debug markers for window/surface lifecycle.
window_markers = []
surface_markers = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

[build-dependencies]
