[package]
name = "rayos-bootloader"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "uefi_boot"
path = "src/main.rs"
harness = false

[dependencies]
uefi = { version = "0.12.0", default-features = false }

[package.metadata]
description = "Minimal UEFI bootloader skeleton for RayOS"
